[gd_scene load_steps=84 format=3 uid="uid://rlk7l2nko52i"]

[ext_resource type="Script" path="res://Scripts/Entities/Player/player.gd" id="1_scfxj"]
[ext_resource type="Texture2D" uid="uid://o0i2w2lk22d1" path="res://Assets/Player/Merchant/Merchant42.png" id="2_4j2xg"]
[ext_resource type="Texture2D" uid="uid://q18vpmrjvsl1" path="res://Assets/Player/Merchant/Merchant43.png" id="3_3ets4"]
[ext_resource type="Texture2D" uid="uid://jdhdbv3rxdr3" path="res://Assets/Player/Merchant/Merchant44.png" id="4_0dsuh"]
[ext_resource type="Texture2D" uid="uid://bjawjkyryecut" path="res://Assets/Player/Merchant/Merchant45.png" id="5_mu7bb"]
[ext_resource type="Texture2D" uid="uid://v6pv8l6vlwjn" path="res://Assets/Player/Merchant/Merchant46.png" id="6_ao72j"]
[ext_resource type="Texture2D" uid="uid://m8mmnbhqombf" path="res://Assets/Player/Merchant/Merchant47.png" id="7_y4i2b"]
[ext_resource type="Texture2D" uid="uid://k85xbjupd6yc" path="res://Assets/Player/Merchant/Merchant48.png" id="8_6bg6m"]
[ext_resource type="Texture2D" uid="uid://bph5tt34psbfc" path="res://Assets/Player/Merchant/Merchant49.png" id="9_fxs51"]
[ext_resource type="Texture2D" uid="uid://d2qpdl3om0o63" path="res://Assets/Player/Merchant/Merchant50.png" id="10_fqqoh"]
[ext_resource type="Texture2D" uid="uid://donu1dminqcve" path="res://Assets/Player/Merchant/Merchant51.png" id="11_jmbus"]
[ext_resource type="Texture2D" uid="uid://cged2i7jlrpeo" path="res://Assets/Player/Merchant/Merchant52.png" id="12_siqew"]
[ext_resource type="Texture2D" uid="uid://ew2t3e87tmkm" path="res://Assets/Player/Merchant/Merchant53.png" id="13_8w7nx"]
[ext_resource type="Texture2D" uid="uid://b5pae8np5rbe4" path="res://Assets/Player/Merchant/Merchant54.png" id="14_joqqk"]
[ext_resource type="Texture2D" uid="uid://c4a4nr71at7m1" path="res://Assets/Player/Merchant/Merchant55.png" id="15_5fv7r"]
[ext_resource type="Texture2D" uid="uid://coogmo1urkw0b" path="res://Assets/Player/Merchant/Merchant56.png" id="16_rcogu"]
[ext_resource type="Texture2D" uid="uid://c23q4myjpf4u6" path="res://Assets/Player/Merchant/Merchant57.png" id="17_higxv"]
[ext_resource type="Texture2D" uid="uid://c5f8prn3dxf33" path="res://Assets/Player/Merchant/Merchant58.png" id="18_u8bf2"]
[ext_resource type="Texture2D" uid="uid://bei4lu3m638e1" path="res://Assets/Player/Merchant/Merchant59.png" id="19_wuohj"]
[ext_resource type="Texture2D" uid="uid://dxkoemhkbx1pu" path="res://Assets/Player/Merchant/Merchant60.png" id="20_dsmdf"]
[ext_resource type="Texture2D" uid="uid://bplgeru6x7mjl" path="res://Assets/Player/Merchant/Merchant61.png" id="21_uk2gi"]
[ext_resource type="Texture2D" uid="uid://bx5s8njnvwxc1" path="res://Assets/Player/Merchant/Merchant62.png" id="22_7nkp0"]
[ext_resource type="Texture2D" uid="uid://cllmg08c4psqu" path="res://Assets/Player/Merchant/Merchant63.png" id="23_e8nxp"]
[ext_resource type="Texture2D" uid="uid://b1rm1o4i4tlve" path="res://Assets/Player/Merchant/Merchant64.png" id="24_y1k6s"]
[ext_resource type="Texture2D" uid="uid://lrlpphxoyn32" path="res://Assets/Player/Merchant/Merchant65.png" id="25_e378e"]
[ext_resource type="Texture2D" uid="uid://ddccqpk66akjb" path="res://Assets/Player/Merchant/Merchant66.png" id="26_0wj3v"]
[ext_resource type="Texture2D" uid="uid://7op4i6g354lg" path="res://Assets/Player/Merchant/Merchant67.png" id="27_frcf0"]
[ext_resource type="Texture2D" uid="uid://6octmyw1qkbu" path="res://Assets/Player/Merchant/Merchant68.png" id="28_b1dgd"]
[ext_resource type="Texture2D" uid="uid://bsj8p5bbd7wax" path="res://Assets/Player/Merchant/Merchant69.png" id="29_nge1n"]
[ext_resource type="Texture2D" uid="uid://dfgm6ibah73wf" path="res://Assets/Player/Merchant/Merchant70.png" id="30_h410d"]
[ext_resource type="Texture2D" uid="uid://bv742qbmrsuml" path="res://Assets/Player/Merchant/Merchant71.png" id="31_y7c4l"]
[ext_resource type="Texture2D" uid="uid://bojhkx6oph0ev" path="res://Assets/Player/Merchant/Merchant72.png" id="32_q347q"]
[ext_resource type="Texture2D" uid="uid://b3hc00ji8lqoa" path="res://Assets/Player/Merchant/Merchant73.png" id="33_l433u"]
[ext_resource type="Texture2D" uid="uid://25cok4e8iiyi" path="res://Assets/Player/Merchant/Merchant1.png" id="34_7r262"]
[ext_resource type="Texture2D" uid="uid://y8f52y13epi1" path="res://Assets/Player/Merchant/Merchant2.png" id="35_36qml"]
[ext_resource type="Texture2D" uid="uid://cwy3tqfyyam80" path="res://Assets/Player/Merchant/Merchant3.png" id="36_gvmwp"]
[ext_resource type="Texture2D" uid="uid://bnfmsdklykh7q" path="res://Assets/Player/Merchant/Merchant4.png" id="37_4dee7"]
[ext_resource type="Texture2D" uid="uid://bfyhj0svffx0v" path="res://Assets/Player/Merchant/Merchant5.png" id="38_mmw0b"]
[ext_resource type="Texture2D" uid="uid://epw1kmp58rjv" path="res://Assets/Player/Merchant/Merchant6.png" id="39_3g5lu"]
[ext_resource type="Texture2D" uid="uid://df23ehemaddg0" path="res://Assets/Player/Merchant/Merchant7.png" id="40_jx81j"]
[ext_resource type="Texture2D" uid="uid://cygifko2dq616" path="res://Assets/Player/Merchant/Merchant8.png" id="41_njas0"]
[ext_resource type="Texture2D" uid="uid://d5315b4xeo2k" path="res://Assets/Player/Merchant/Merchant9.png" id="42_jxfof"]
[ext_resource type="Texture2D" uid="uid://dee0455o2i3p" path="res://Assets/Player/Merchant/Merchant10.png" id="43_nmw6l"]
[ext_resource type="Texture2D" uid="uid://by0dc6crb0ymv" path="res://Assets/Player/Merchant/Merchant11.png" id="44_isy8u"]
[ext_resource type="Texture2D" uid="uid://crx2lx1h4qalt" path="res://Assets/Player/Merchant/Merchant12.png" id="45_pi52v"]
[ext_resource type="Texture2D" uid="uid://bgcwh6qkj7s0k" path="res://Assets/Player/Merchant/Merchant13.png" id="46_78ihp"]
[ext_resource type="Texture2D" uid="uid://grrqbhhraqmq" path="res://Assets/Player/Merchant/Merchant14.png" id="47_ldygw"]
[ext_resource type="Texture2D" uid="uid://b6rykw44ebdvw" path="res://Assets/Player/Merchant/Merchant15.png" id="48_hjbrv"]
[ext_resource type="Texture2D" uid="uid://cqqiuobcef40i" path="res://Assets/Player/Merchant/Merchant16.png" id="49_mdsmr"]
[ext_resource type="Texture2D" uid="uid://ctir171owskls" path="res://Assets/Player/Merchant/Merchant17.png" id="50_ccevn"]
[ext_resource type="Texture2D" uid="uid://d217kdt88wjgw" path="res://Assets/Player/Merchant/Merchant18.png" id="51_prgq2"]
[ext_resource type="Texture2D" uid="uid://4w3e1rv6qh85" path="res://Assets/Player/Merchant/Merchant19.png" id="52_c65n1"]
[ext_resource type="Texture2D" uid="uid://c444dhctnrvft" path="res://Assets/Player/Merchant/Merchant20.png" id="53_fpio0"]
[ext_resource type="Texture2D" uid="uid://lbtqd10ywhs0" path="res://Assets/Player/Merchant/Merchant21.png" id="54_1eayl"]
[ext_resource type="Texture2D" uid="uid://b7b6x43qifcvb" path="res://Assets/Player/Merchant/Merchant22.png" id="55_l3x2i"]
[ext_resource type="Texture2D" uid="uid://c6fdlghvgg2o8" path="res://Assets/Player/Merchant/Merchant23.png" id="56_fruxj"]
[ext_resource type="Texture2D" uid="uid://do543a2veowby" path="res://Assets/Player/Merchant/Merchant24.png" id="57_x1h5c"]
[ext_resource type="Texture2D" uid="uid://c0ion3eh0moqe" path="res://Assets/Player/Merchant/Merchant25.png" id="58_i1btt"]
[ext_resource type="Texture2D" uid="uid://cpaprvtfamdm" path="res://Assets/Player/Merchant/Merchant26.png" id="59_8ky88"]
[ext_resource type="PackedScene" uid="uid://r8mfx3cskh87" path="res://Scripts/Entities/Player/Weapon/Weapon.tscn" id="60_4ojy3"]
[ext_resource type="PackedScene" uid="uid://cgq1aqmy03m0t" path="res://Scripts/UI/player_ui.tscn" id="61_l2ftj"]

[sub_resource type="SpriteFrames" id="SpriteFrames_qalai"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_4j2xg")
}, {
"duration": 1.0,
"texture": ExtResource("3_3ets4")
}, {
"duration": 1.0,
"texture": ExtResource("4_0dsuh")
}, {
"duration": 1.0,
"texture": ExtResource("5_mu7bb")
}, {
"duration": 1.0,
"texture": ExtResource("6_ao72j")
}, {
"duration": 1.0,
"texture": ExtResource("7_y4i2b")
}, {
"duration": 1.0,
"texture": ExtResource("8_6bg6m")
}, {
"duration": 1.0,
"texture": ExtResource("9_fxs51")
}],
"loop": false,
"name": &"HurtIdleLeft",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_fqqoh")
}, {
"duration": 1.0,
"texture": ExtResource("11_jmbus")
}, {
"duration": 1.0,
"texture": ExtResource("12_siqew")
}, {
"duration": 1.0,
"texture": ExtResource("13_8w7nx")
}, {
"duration": 1.0,
"texture": ExtResource("14_joqqk")
}, {
"duration": 1.0,
"texture": ExtResource("15_5fv7r")
}, {
"duration": 1.0,
"texture": ExtResource("16_rcogu")
}, {
"duration": 1.0,
"texture": ExtResource("17_higxv")
}],
"loop": false,
"name": &"HurtIdleRight",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("18_u8bf2")
}, {
"duration": 1.0,
"texture": ExtResource("19_wuohj")
}, {
"duration": 1.0,
"texture": ExtResource("20_dsmdf")
}, {
"duration": 1.0,
"texture": ExtResource("21_uk2gi")
}, {
"duration": 1.0,
"texture": ExtResource("22_7nkp0")
}, {
"duration": 1.0,
"texture": ExtResource("23_e8nxp")
}, {
"duration": 1.0,
"texture": ExtResource("24_y1k6s")
}, {
"duration": 1.0,
"texture": ExtResource("25_e378e")
}],
"loop": false,
"name": &"HurtLeft",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("26_0wj3v")
}, {
"duration": 1.0,
"texture": ExtResource("27_frcf0")
}, {
"duration": 1.0,
"texture": ExtResource("28_b1dgd")
}, {
"duration": 1.0,
"texture": ExtResource("29_nge1n")
}, {
"duration": 1.0,
"texture": ExtResource("30_h410d")
}, {
"duration": 1.0,
"texture": ExtResource("31_y7c4l")
}, {
"duration": 1.0,
"texture": ExtResource("32_q347q")
}, {
"duration": 1.0,
"texture": ExtResource("33_l433u")
}],
"loop": false,
"name": &"HurtRight",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("34_7r262")
}, {
"duration": 1.0,
"texture": ExtResource("35_36qml")
}, {
"duration": 1.0,
"texture": ExtResource("36_gvmwp")
}, {
"duration": 1.0,
"texture": ExtResource("37_4dee7")
}, {
"duration": 1.0,
"texture": ExtResource("38_mmw0b")
}],
"loop": true,
"name": &"IdleLeft",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("39_3g5lu")
}, {
"duration": 1.0,
"texture": ExtResource("40_jx81j")
}, {
"duration": 1.0,
"texture": ExtResource("41_njas0")
}, {
"duration": 1.0,
"texture": ExtResource("42_jxfof")
}, {
"duration": 1.0,
"texture": ExtResource("43_nmw6l")
}],
"loop": true,
"name": &"IdleRight",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("44_isy8u")
}, {
"duration": 1.0,
"texture": ExtResource("45_pi52v")
}, {
"duration": 1.0,
"texture": ExtResource("46_78ihp")
}, {
"duration": 1.0,
"texture": ExtResource("47_ldygw")
}, {
"duration": 1.0,
"texture": ExtResource("48_hjbrv")
}, {
"duration": 1.0,
"texture": ExtResource("49_mdsmr")
}, {
"duration": 1.0,
"texture": ExtResource("50_ccevn")
}, {
"duration": 1.0,
"texture": ExtResource("51_prgq2")
}],
"loop": true,
"name": &"MoveLeft",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("52_c65n1")
}, {
"duration": 1.0,
"texture": ExtResource("53_fpio0")
}, {
"duration": 1.0,
"texture": ExtResource("54_1eayl")
}, {
"duration": 1.0,
"texture": ExtResource("55_l3x2i")
}, {
"duration": 1.0,
"texture": ExtResource("56_fruxj")
}, {
"duration": 1.0,
"texture": ExtResource("57_x1h5c")
}, {
"duration": 1.0,
"texture": ExtResource("58_i1btt")
}, {
"duration": 1.0,
"texture": ExtResource("59_8ky88")
}],
"loop": true,
"name": &"MoveRight",
"speed": 15.0
}]

[sub_resource type="Animation" id="Animation_otuhf"]
resource_name = "HurtIdleLeft"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"HurtIdleLeft"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_m8876"]
resource_name = "HurtIdleRight"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"HurtIdleRight"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_5xfpr"]
resource_name = "HurtLeft"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"HurtLeft"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13]
}

[sub_resource type="Animation" id="Animation_3rr1w"]
resource_name = "HurtRight"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"HurtRight"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13]
}

[sub_resource type="Animation" id="Animation_ryvm6"]
resource_name = "IdleLeft"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"IdleLeft"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_wpolo"]
resource_name = "IdleRight"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"IdleRight"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_4rfwd"]
resource_name = "MoveLeft"
length = 0.4
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"MoveLeft"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13]
}

[sub_resource type="Animation" id="Animation_q52ud"]
resource_name = "MoveRight"
length = 0.4
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"MoveRight"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13]
}

[sub_resource type="Animation" id="Animation_rvqmt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"IdleLeft"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8nn8f"]
_data = {
"HurtIdleLeft": SubResource("Animation_otuhf"),
"HurtIdleRight": SubResource("Animation_m8876"),
"HurtLeft": SubResource("Animation_5xfpr"),
"HurtRight": SubResource("Animation_3rr1w"),
"IdleLeft": SubResource("Animation_ryvm6"),
"IdleRight": SubResource("Animation_wpolo"),
"MoveLeft": SubResource("Animation_4rfwd"),
"MoveRight": SubResource("Animation_q52ud"),
"RESET": SubResource("Animation_rvqmt")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7yq22"]
animation = &"IdleRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0uiq0"]
animation = &"IdleLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kumu2"]
animation = &"IdleLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5g6qo"]
animation = &"IdleRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vml7m"]
animation = &"IdleLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_r46tt"]
animation = &"IdleRight"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_g43w7"]
blend_point_0/node = SubResource("AnimationNodeAnimation_7yq22")
blend_point_0/pos = Vector2(1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_0uiq0")
blend_point_1/pos = Vector2(-1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_kumu2")
blend_point_2/pos = Vector2(0, 1)
blend_point_3/node = SubResource("AnimationNodeAnimation_5g6qo")
blend_point_3/pos = Vector2(0, 1)
blend_point_4/node = SubResource("AnimationNodeAnimation_vml7m")
blend_point_4/pos = Vector2(0, -1)
blend_point_5/node = SubResource("AnimationNodeAnimation_r46tt")
blend_point_5/pos = Vector2(0, -1)

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_a6mll"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_vql3l"]
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_g43w7")
states/Idle/position = Vector2(439, 91)
states/Move/node = SubResource("AnimationNodeBlendSpace2D_a6mll")
states/Move/position = Vector2(613, 100)

[sub_resource type="CircleShape2D" id="CircleShape2D_5xhcs"]
radius = 25.1794

[sub_resource type="CircleShape2D" id="CircleShape2D_0dppj"]
radius = 5.83333

[node name="Player2" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 16
script = ExtResource("1_scfxj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -14)
sprite_frames = SubResource("SpriteFrames_qalai")
animation = &"IdleLeft"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimatedSprite2D")
libraries = {
"": SubResource("AnimationLibrary_8nn8f")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_vql3l")
anim_player = NodePath("../AnimationPlayer")
parameters/Idle/blend_position = Vector2(0, 0)
parameters/Move/blend_position = Vector2(0, 0)

[node name="Weapon" parent="." instance=ExtResource("60_4ojy3")]
position = Vector2(0, -14)

[node name="DustParticleCD" type="Timer" parent="."]
wait_time = 0.25

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 16

[node name="PickUpArea" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(0, -14)
shape = SubResource("CircleShape2D_5xhcs")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(2, -14)
scale = Vector2(1.08396, 2.08631)
shape = SubResource("CircleShape2D_0dppj")

[node name="HurtTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="PlayerUI" parent="." instance=ExtResource("61_l2ftj")]
offset_left = -177.0
offset_top = -95.0
offset_right = -177.0
offset_bottom = -95.0

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="DustParticleCD" to="." method="_on_dust_particle_cd_timeout"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="timeout" from="HurtTimer" to="." method="_on_hurt_timer_timeout"]
